# otus-cpp-basic

./: .gitignore  CMakeLists.txt  README.md  config.h.in  counter.h  statistics.cpp  topk_words_async.cpp  topk_words_async2.cpp  topk_words_sync.cpp
files/: knigga.txt
files/test/: fight_club.txt
homework/: example.h.gch
include/: abstract_linked_list.hpp  bidirectional_node.hpp  node.hpp  parser.hpp
include/statistics/: max.hpp  mean.hpp  min.hpp  percentile.hpp  standard_deviation.hpp  statistics.hpp
include/tree/: add.hpp  astnode.hpp  div.hpp  mul.hpp  number.hpp  operation_node.hpp  sub.hpp  variable.hpp
src/: CMakeLists.txt  config.h  debugger.h  fl.hpp  game.h  game_options_parser.cpp  main.cpp  main.h  max.cpp  mean.cpp  min.cpp  parser.cpp  percentile.cpp  run_game.cpp  scores.txt  standard_deviation.cpp
src/debugger/: debugger.cpp  debugger.hpp
src/forward_list/: forward_list.hpp  forward_list_const_iterator.ipp  forward_list_ctors.ipp  forward_list_iterator.ipp  forward_list_methods.ipp  forward_list_operators.ipp  forward_list_private_methods.ipp
src/forward_list/iterator/: forward_list_const_iterator.hpp  forward_list_const_iterator.ipp  forward_list_iterator.hpp  forward_list_iterator.ipp
src/game/: game.h  run_game.cpp
src/game_settings/: game_settings.cpp  game_settings.hpp  option.hpp  option_type.hpp
src/hw_tasks/: hw_tasks.h  test_forward_list.cpp  test_list.cpp  test_vector.cpp
src/iterator/: const_iterator.hpp  const_iterator.ipp  iterator.hpp  iterator.ipp
src/iterator/aaa/: const_iterator.hpp  iterator.hpp  iterator.ipp  iterator_caster.hpp
src/iterator/bbb/: const_iterator.hpp  const_iterator.ipp  iterator.hpp
src/iterator/separated/: forward_iterator.hpp  forward_iterator.ipp
src/iterator/sequential/: iterator_base.hpp  iterator_base.ipp
src/iterator/sequentual/: const_iterator.hpp  const_iterator.ipp  iterator.hpp  iterator.ipp
src/libs/: CMakeLists.txt
src/libs/randomizer/: CMakeLists.txt  random_value.cpp  randomizer.h
src/libs/scores_manager/: CMakeLists.txt  score.cpp  scores_manager.cpp  scores_manager.h
src/libs/value_checker/: CMakeLists.txt  check_value.cpp  value_checker.h
src/linked_list/: linked_list.hpp  linked_list_ctors.ipp  linked_list_iterator.ipp
src/list/: list.hpp  list_ctors.ipp  list_iterator.ipp  list_methods.ipp  list_operators.ipp  list_private_methods.ipp
src/nodes/: add.cpp  astnode.cpp  div.cpp  mul.cpp  number.cpp  operation_node.cpp  sub.cpp  variable.cpp
src/parser/: game_options_parser.cpp  game_options_parser.h
src/vector/: vector.hpp  vector_ctors.ipp  vector_iterator.ipp  vector_methods.ipp  vector_operators.ipp  vector_private_methods.ipp
tests/: CMakeLists.txt  forward_iterator_tests.cpp  forward_list_internal_tests.cpp  forward_list_iterator_tests.cpp  iterator_tests.cpp  list_internal_tests.cpp  test_struct.hpp  vector_internal_tests.cpp
topk_count_thread_pool/: counter_worker.cpp  counter_worker.hpp  topk_count_thread_pool.cpp  topk_count_thread_pool.hpp
utils/: utils.cpp  utils.h
waiting_queue/: waiting_queue.h
word_counter/: topk_word_counter.cpp  topk_word_counter.hpp
